--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
   <main>
     <div class="card">
-      <img src="images/illustration-hero.svg" alt="">
+      <img src="images/illustration-hero.svg" alt="main image">
       <div class="content">
         <h1>Order Summary</h1>
         <p>
